--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "osmosis": "^1.1.2"
+    "cheerio": "^0.22.0",
+    "osmosis": "^1.1.2",
+    "request": "^2.81.0",
+    "superagent": "^3.5.0"
   }
 }
